dhall/tests/type-errors/unit/EquivalenceNotTerms.txt
Type error: error: EquivalenceArgumentsMustBeTerms
 --> <current file>:1:0
  |
1 | Bool === Bool
  | ^^^^^^^^^^^^^ EquivalenceArgumentsMustBeTerms
  |
